.deploy/test-beta/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-beta
  namespace: test
spec:
  type: ClusterIP
  selector:
    app: test-beta
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
