.deploy/test-beta/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-beta
  namespace: test
  annotations:
    external-dns.alpha.kubernetes.io/hostname: test-beta.home.coolkev.com
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: test-beta.home.coolkev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-beta
                port:
                  number: 80
